[tool.poetry]
name = "django-droplet-deploy"
version = "0.1.0"
description = "A python package to deploy django projects to digital ocean droplet."
authors = ["prajeeshag <prajeeshag@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
doctl = "^0.2.3"
paramiko = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
