[tool.poetry]
name = "dj-droplet"
version = "0.1.0"
description = "A python package to deploy django projects to digital ocean droplet."
authors = ["prajeeshag <prajeeshag@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^2.8.1"
PyYAML = "^6.0"
maya = "^0.6.1"
"delegator.py" = "^0.1.1"
py-doctl = {git = "https://github.com/prajeeshag/py-doctl.git", rev = "main"}
requests = "^2.26.0"
GitPython = "^3.1.24"
python-dotenv = "^0.19.2"
PyInquirer = "^1.0.3"
scp = "^0.14.1"
pgtoolkit = "^0.17.0"
jsonpickle = "^2.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dj_droplet = 'dj_droplet.droplet:main'